# dendrite

./: .gitignore  CLAUDE.md  CLAUDE_CODE_GUIDE.md  DEMO_NOTES.md  DENDRITE_CLAUDE_CODE_INTEGRATION.md  Dockerfile  README.md  api_bridge.py  demo.sh  dendrite-hooks-example.json  dendrite_mcp_server.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/commands/: done.md  handoff.md  review.md
.claude/skills/knowledge/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.claude/skills/synthesize/: SKILL.md
.runtime/: session_id
api/: Cargo.toml
api/src/: handlers.rs  main.rs  models.rs
dendrite/: __init__.py  analyzer.py  cli.py  core.py  display.py  storage.py  synapse.py
scripts/: mayor-enrich.sh  seed-demo.py
tests/: conftest.py  test_analyzer.py  test_core.py  test_edge_cases.py  test_mcp_server.py  test_storage.py  test_synapse.py
