[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dendrite"
version = "0.1.0"
description = "Neural-inspired knowledge synthesis"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dendrite = "dendrite.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
